feat: add user and folders http handlers and user auth to controller